--- a/style.css
+++ b/style.css
@@ -35,9 +35,10 @@ body {
   text-align: center;
   font-family: cursive; }
 
-.container {
+#container {
   display: grid;
-  grid-template-areas: "insta instb instc instd" "inste instf instg insth"; }
+  grid-template-areas: "insta instb instc instd"
+ "inste instf instg insth"; }
 
 /*grid area index*/
 .insta {
@@ -98,6 +99,18 @@ body {
   transform: translateY(-15px);
   box-shadow: 0 2px 2px #393241; }
 
+  .btnAgregar {
+    font-weight: 40px;
+    text-decoration: none;
+    color: white;
+    background-color: green;
+    border-radius: 25px;
+    padding: 10px 30px;
+    display: block;
+    margin: 15px; 
+    text-decoration: none;
+  }
+
 .bloque {
   margin: 40px 80px;
   display: grid;
@@ -138,7 +151,10 @@ body {
     grid-template-columns: 1fr; }
   .container {
     display: grid;
-    grid-template-areas: "insta instb" "instc instd" "inste instf" "instg insth"; }
+    grid-template-areas: "insta instb"
+ "instc instd"
+ "inste instf"
+ "instg insth"; }
   .img {
     height: 300px;
     width: 100%; } }
@@ -146,4 +162,7 @@ body {
 @media (max-width: 480px) {
   .container {
     display: grid;
-    grid-template-areas: "insta instb" "instc instd" "inste instf" "instg insth"; } }
+    grid-template-areas: "insta instb"
+ "instc instd"
+ "inste instf"
+ "instg insth"; } }
